Fix #2008 "Textarea content must wrap"

--- a/src/resources/apps/fr/style/form-runner-base.css
+++ b/src/resources/apps/fr/style/form-runner-base.css
@@ -525,7 +525,8 @@
   white-space: -moz-pre-wrap;
   white-space: pre-wrap;
   *white-space: normal;
-  word-break: normal;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 .orbeon .xforms-form .fr-mode-view .xforms-hint,
 .orbeon .xforms-form .fr-mode-pdf .xforms-hint,
